practical-multicluster/clusters/color-b/route-to-color-b-10.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-route
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: color
    port: 80
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: color-color
      port: 80
      weight: 90
    - group: ""
      kind: Service
      name: color-color-b
      port: 80
      weight: 10
